[package]
name = "servyi-states"
version = "0.1.0"
edition = "2021"
description = "Hierarchical context IDs, phase trackers, and generic state machine infrastructure"
license = "MIT"

[dependencies]
dashmap = "6"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
